[metadata]
name = TaPCAP
version = 1.0.0
author = Maya Kapoor
author_email = mkapoor1@uncc.edu
description = A PCAP tabularization tool
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mayakapoor/tapcap
project_urls =
    Bug Tracker = https://github.com/mayakapoor/tapcap/issues
    repository = https://github.com/mayakapoor/tapcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
